--- a/src/app/components/falcon1/falcon1.component.html
+++ b/src/app/components/falcon1/falcon1.component.html
@@ -1,6 +1,6 @@
 <h2 class="font-bold text-center mt-4 text-uppercase fw-bolder">Подробное описание</h2>
-<div class="w-75 justify-content-center m-auto p-4">
-  <table class="table table-striped table-hover">
+<div class="w-75 m-auto p-4">
+  <table class="table table-striped">
     <tbody>
     <tr>
       <th scope="row">Ракета семейства</th>
