--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,15 +1,5 @@
-.background {
-  background: url('../../../assets/wallpaperflare.com_wallpaper.jpg') no-repeat fixed center center;
-
-  -webkit-background-size: cover;
-
-  -moz-background-size: cover;
-
-  -o-background-size: cover;
-
-  background-size: cover;
-}
-
-.letter {
-  letter-spacing: -2px;
+.absolute {
+  position: absolute;
+  top: 30%;
+  text-align: center;
 }
