--- a/src/app/components/list-launches/list-launches.component.html
+++ b/src/app/components/list-launches/list-launches.component.html
@@ -11,9 +11,9 @@
      </mat-form-field>-->
 
     <mat-form-field appearance="fill" class="p-2 m-4 form-control">
-      <mat-label>Год миссии</mat-label>
+      <mat-label>Количество запусков ракеты</mat-label>
       <mat-select [(value)]="count">
-        <mat-option>Выбрать год</mat-option>
+        <mat-option>-</mat-option>
         <mat-option value="1">1</mat-option>
         <mat-option value="2">2</mat-option>
         <mat-option value="3">3</mat-option>
@@ -78,10 +78,10 @@
   </div>
 
   <div>
-    <h2 class="fs-5 mb-3 mt-3 text-center">Подробное описание миссии</h2>
+    <h2 class="fs-5 mb-3 mt-3 text-center">Подробное описание выбранной миссии</h2>
     <div class="d-flex">
       <button (click)="IsShowAllMissions()" class="btn btn-primary mx-auto mt-0"
-              type="button">{{status}} все миссии
+              type="button">{{status}} миссии
       </button>
     </div>
     <div *ngIf="!IsShowed">
