--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="background h-100 w-100" [style]="slideShowAnimation()">
+<div [style]="slideShowAnimation()" class="background h-100 w-100">
   <!--<h2 class="font-bold text-center text-uppercase fw-bolder m-0 p-3 text-white">Главная</h2>-->
 </div>
 <div class="display-3 text-white display-6 text-uppercase text-center
@@ -31,6 +31,7 @@
 </div>
 <div>
   <h6 class="text-white text-uppercase fw-bolder position-absolute bottom-0 p-2 m-2">Разработал:
-    <a href="https://github.com/DaniilRyb?tab=repositories" title="https://github.com/DaniilRyb?tab=repositories" class="text-white">Daniil Rybakov</a>
+    <a class="text-white" href="https://github.com/DaniilRyb?tab=repositories"
+       title="https://github.com/DaniilRyb?tab=repositories">Daniil Rybakov</a>
   </h6>
 </div>
