--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,16 +19,17 @@
             <a class="nav-link" routerLink="/">Главная</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" routerLink="/launches">Список запусков</a>
+            <a class="nav-link" routerLink="/launches">Запуски SpaceX</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" routerLink="/rockets">Описание ракет</a>
+            <a class="nav-link" routerLink="/rockets">ракеты</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
 </header>
+
 <router-outlet>
 </router-outlet>
 
@@ -47,7 +48,4 @@
 </nav>
 </div>
 </footer>-->
-
-
-
 
