--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,37 +1,35 @@
-<div [style]="slideShowAnimation()" class="background h-100 w-100">
-  <!--<h2 class="font-bold text-center text-uppercase fw-bolder m-0 p-3 text-white">Главная</h2>-->
-</div>
-<div class="display-3 text-white display-6 text-uppercase text-center
-    p-5 fw-bolder position-absolute top-1 absolute">
+<div [style]="slideShowAnimation()" class="background h-100 w-100 position-relative">
+  <div class="position-absolute bottom-0">
+    <h6 class="text-white text-uppercase fw-bolder p-2 m-2">
+      Разработал:
+      <a class="text-white" href="https://github.com/DaniilRyb?tab=repositories"
+         title="https://github.com/DaniilRyb?tab=repositories">Daniil Rybakov</a>
+    </h6>
+  </div>
+  <div class="display-3 text-white display-6 text-uppercase text-center p-5 fw-bolder position-absolute top-1 absolute">
+    Привет! Этот сервис создан для отслеживания запусков компании SpaceX. Здесь можно найти информацию о прошедших
+    запусках и описание ракет
 
-  Привет! Этот сервис создан для отслеживания запусков компании SpaceX. Здесь можно найти информацию о прошедших
-  запусках и описание ракет
+    <!--<p class="fs-4 p-2">
+      <span class="fst-italic">Space Exploration Technologies Corporation, SpaceX</span> —
+      американская компания, производитель космической техники. Штаб-квартира — в городе Хоторне, Калифорния, США.
+      Основана в 2002 году прежним акционером PayPal и CEO Tesla Motors Илоном Маском с целью сократить расходы на
+      полёты
+      в космос для открытия пути к колонизации Марса.
+      Компания разработала ракеты-носители Falcon 1, Falcon 9 и Falcon Heavy, с самого начала преследуя цель сделать
+      их
+      многоразовыми, и космический корабль Dragon (выводимый на орбиту теми же Falcon 9), предназначенный для
+      пополнения
+      запасов на Международной космической станции.</p>-->
 
-  <!--<p class="fs-4 p-2">
-    <span class="fst-italic">Space Exploration Technologies Corporation, SpaceX</span> —
-    американская компания, производитель космической техники. Штаб-квартира — в городе Хоторне, Калифорния, США.
-    Основана в 2002 году прежним акционером PayPal и CEO Tesla Motors Илоном Маском с целью сократить расходы на
-    полёты
-    в космос для открытия пути к колонизации Марса.
-    Компания разработала ракеты-носители Falcon 1, Falcon 9 и Falcon Heavy, с самого начала преследуя цель сделать
-    их
-    многоразовыми, и космический корабль Dragon (выводимый на орбиту теми же Falcon 9), предназначенный для
-    пополнения
-    запасов на Международной космической станции.</p>-->
-
-  <!--
-  <div class="flex-fill p-5">
-    <img
-      alt="Falcon9 SpaceX"
-      class="shadow-lg bg-white rounded" height="500"
-      src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/eb/Bangabandhu_Satellite-1_Mission_%2842025499722%29.jpg/533px-Bangabandhu_Satellite-1_Mission_%2842025499722%29.jpg"
-      width="400">
-    <p class="mt-3 fst-italic fw-bolder text-center">Запуск Falcon 9 Block 5 со спутником Bangabandhu-1</p>
-  </div>-->
-</div>
-<div>
-  <h6 class="text-white text-uppercase fw-bolder position-absolute bottom-0 p-2 m-2">Разработал:
-    <a class="text-white" href="https://github.com/DaniilRyb?tab=repositories"
-       title="https://github.com/DaniilRyb?tab=repositories">Daniil Rybakov</a>
-  </h6>
+    <!--
+    <div class="flex-fill p-5">
+      <img
+        alt="Falcon9 SpaceX"
+        class="shadow-lg bg-white rounded" height="500"
+        src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/eb/Bangabandhu_Satellite-1_Mission_%2842025499722%29.jpg/533px-Bangabandhu_Satellite-1_Mission_%2842025499722%29.jpg"
+        width="400">
+      <p class="mt-3 fst-italic fw-bolder text-center">Запуск Falcon 9 Block 5 со спутником Bangabandhu-1</p>
+    </div>-->
+  </div>
 </div>
