--- a/src/app/components/list-launches/list-launches.component.html
+++ b/src/app/components/list-launches/list-launches.component.html
@@ -1,16 +1,8 @@
 <div>
-
   <h2 class="font-bold text-center mt-4 mb-5 text-uppercase fw-bolder">Описание запусков</h2>
   <h3 class="fs-4 text-uppercase text-center">Поиск миссий</h3>
-
   <div class="input-group">
-
-    <!-- <mat-form-field appearance="fill" class="p-2 m-4 form-control">
-       <mat-label>Количество запусков ракеты</mat-label>
-       <input [(ngModel)]="count" matInput placeholder="Например, 3" type="text">
-     </mat-form-field>-->
-
-    <mat-form-field appearance="fill" class="p-2 m-4 form-control">
+    <mat-form-field class="m-5 form-control">
       <mat-label>Количество запусков ракеты</mat-label>
       <mat-select [(value)]="count">
         <mat-option>-</mat-option>
@@ -36,7 +28,7 @@
        <input [(ngModel)]="date" matInput placeholder="Например, 2019" type="text">
      </mat-form-field>-->
 
-    <mat-form-field appearance="fill" class="p-2 m-4 form-control">
+    <mat-form-field appearance="fill" class="m-5 form-control">
       <mat-label>Год миссии</mat-label>
       <mat-select [(value)]="date">
         <mat-option>Выбрать год</mat-option>
@@ -61,12 +53,12 @@
     </mat-form-field>
 
 
-    <mat-form-field appearance="fill" class="p-2 m-4 form-control">
+    <mat-form-field appearance="fill" class="p-2 m-5 form-control">
       <mat-label>Название миссии</mat-label>
       <input [(ngModel)]="name" matInput placeholder="Например, CRS-20" type="text">
     </mat-form-field>
 
-    <mat-form-field appearance="fill" class="p-2 m-4 form-control">
+    <mat-form-field appearance="fill" class="p-2 m-5 form-control">
       <mat-label>Посадка первой ступени</mat-label>
       <mat-select [(value)]="landing_success">
         <mat-option>Выбрать тип</mat-option>
