added slide show and autocomplete for search mission name

--- a/src/app/components/falcon9/falcon9.component.html
+++ b/src/app/components/falcon9/falcon9.component.html
@@ -1,5 +1,5 @@
 <h2 class="font-bold text-center mt-4 text-uppercase fw-bolder">Подробное описание</h2>
-<div class="w-75 justify-content-center m-auto p-4">
+<div class="m-auto p-4">
   <table class="table table-striped table-hover">
     <tbody>
     <tr>
@@ -136,7 +136,7 @@
              height="400" width="700">
       </td>
     </tr>
-    <tr>
+    <tr class="text-center">
       <th scope="row">Видео</th>
       <!--<h3 class="font-bold mt-4 mb-4 text-uppercase">Видео</h3>
       -->
@@ -150,4 +150,4 @@
     </tbody>
   </table>
 </div>
-<app-scroll-page></app-scroll-page>
+<app-scroll-page/>
