--- a/src/app/components/starship/starship.component.html
+++ b/src/app/components/starship/starship.component.html
@@ -1,5 +1,5 @@
 <h2 class="font-bold text-center mt-4 text-uppercase fw-bolder">Подробное описание</h2>
-<div class="w-75 justify-content-center m-auto p-4">
+<div class="m-auto p-4">
   <table class="table table-striped table-hover">
     <tbody>
     <tr>
@@ -145,7 +145,7 @@
         </li>
       </ul>
     </tr>
-    <tr>
+    <tr class="text-center">
       <th scope="row">Видео</th>
       <td>
         <iframe class="mx-auto" height="400" src="https://www.youtube.com/embed/ODY6JWzS8WU"
@@ -157,4 +157,4 @@
     </tbody>
   </table>
 </div>
-<app-scroll-page></app-scroll-page>
+<app-scroll-page/>
