--- a/src/app/components/falcon-heavy/falcon-heavy.component.html
+++ b/src/app/components/falcon-heavy/falcon-heavy.component.html
@@ -1,5 +1,5 @@
 <h2 class="font-bold text-center mt-4 text-uppercase fw-bolder">Подробное описание</h2>
-<div class="w-75 justify-content-center m-auto p-4">
+<div class="m-auto p-4">
   <table class="table table-striped table-hover">
     <tbody>
     <tr>
@@ -130,15 +130,14 @@
     </tr>
     <tr *ngFor="let img of rocketsService.rockets[2].flickr_images" class="text-center">
       <th class="text-lg-start" scope="row">Изображения</th>
-      <td><img [alt]="rocketsService.rockets[2].name"
-               [src]="img"
-               [title]="rocketsService.rockets[2].name + ' rocket image'"
-               height="400" width="700"></td>
+      <td>
+        <img [alt]="rocketsService.rockets[2].name"
+             [src]="img"
+             [title]="rocketsService.rockets[2].name + ' rocket image'"
+             height="400" width="700"></td>
     </tr>
-    <tr>
+    <tr class="text-center">
       <th scope="row">Видео</th>
-      <!--<h3 class="font-bold mt-4 mb-4 text-uppercase">Видео</h3>
-      -->
       <td>
         <iframe class="shadow-lg" height="400" src="https://www.youtube.com/embed/wbSwFU6tY1c"
                 title="Starship | SN10 | High-Altitude Flight Test"
@@ -149,4 +148,4 @@
     </tbody>
   </table>
 </div>
-<app-scroll-page></app-scroll-page>
+<app-scroll-page/>
