--- a/src/app/components/falcon1/falcon1.component.html
+++ b/src/app/components/falcon1/falcon1.component.html
@@ -1,5 +1,5 @@
 <h2 class="font-bold text-center mt-4 text-uppercase fw-bolder">Подробное описание</h2>
-<div class="w-75 m-auto p-4">
+<div class="m-auto p-4">
   <table class="table table-striped">
     <tbody>
     <tr>
@@ -136,7 +136,7 @@
              height="400" width="700">
       </td>
     </tr>
-    <tr>
+    <tr class="text-center">
       <th scope="row">Видео</th>
       <!--<h3 class="font-bold mt-4 mb-4 text-uppercase">Видео</h3>
       -->
@@ -146,7 +146,8 @@
                 width="700">
         </iframe>
       </td>
+    </tr>
     </tbody>
   </table>
 </div>
-<app-scroll-page></app-scroll-page>
+<app-scroll-page/>
