--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,35 +1,72 @@
-<div [style]="slideShowAnimation()" class="background h-100 w-100 position-relative">
-  <div class="position-absolute bottom-0">
-    <h6 class="text-white text-uppercase fw-bolder p-2 m-2">
-      Разработал:
-      <a class="text-white" href="https://github.com/DaniilRyb?tab=repositories"
-         title="https://github.com/DaniilRyb?tab=repositories">Daniil Rybakov</a>
-    </h6>
+<!--<div [style]="slideShowAnimation()" class="background h-100 w-100 position-relative">
+  <div class="position-absolute bottom-0 d-inline p-2">
+    <a href="https://github.com/DaniilRyb?tab=repositories"
+       title="https://github.com/DaniilRyb?tab=repositories" target="_blank" class="p-2 m-1">
+      <img src="assets/icons-github.svg" width="40" height="40">
+    </a>
+    <a href="https://vk.com/daniil_ryb"
+       title="https://vk.com/daniil_ryb" target="_blank" class="p-2 m-1">
+      <img src="assets/icons-vk.svg" width="40" height="40">
+    </a>
+    <a href="/"
+       title="LinkedIn" target="_blank" class="p-2 m-1">
+      <img src="assets/icons-linkedin.svg" width="40" height="40">
+    </a>
   </div>
-  <div class="display-3 text-white display-6 text-uppercase text-center p-5 fw-bolder position-absolute top-1 absolute">
+  <div class="d-inline position-absolute bottom-0 end-0">
+    <h4 class="text-white p-2 text-uppercase">Created by Daniil Rybakov</h4>
+  </div>-->
+
+<!--<p class="fs-4 p-2">
+  <span class="fst-italic">Space Exploration Technologies Corporation, SpaceX</span> —
+  американская компания, производитель космической техники. Штаб-квартира — в городе Хоторне, Калифорния, США.
+  Основана в 2002 году прежним акционером PayPal и CEO Tesla Motors Илоном Маском с целью сократить расходы на
+  полёты
+  в космос для открытия пути к колонизации Марса.
+  Компания разработала ракеты-носители Falcon 1, Falcon 9 и Falcon Heavy, с самого начала преследуя цель сделать
+  их
+  многоразовыми, и космический корабль Dragon (выводимый на орбиту теми же Falcon 9), предназначенный для
+  пополнения
+  запасов на Международной космической станции.</p>-->
+
+<!--
+<div class="flex-fill p-5">
+  <img
+    alt="Falcon9 SpaceX"
+    class="shadow-lg bg-white rounded" height="500"
+    src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/eb/Bangabandhu_Satellite-1_Mission_%2842025499722%29.jpg/533px-Bangabandhu_Satellite-1_Mission_%2842025499722%29.jpg"
+    width="400">
+  <p class="mt-3 fst-italic fw-bolder text-center">Запуск Falcon 9 Block 5 со спутником Bangabandhu-1</p>
+</div>-->
+<!--</div>-->
+
+<div class="p-0 w-100 position-relative">
+  <mdb-carousel [animation]="'slide'" class="p-0">
+    <mdb-carousel-item *ngFor="let item of items">
+      <img [alt]="item" [src]="item" class="d-block w-100 h-100">
+    </mdb-carousel-item>
+  </mdb-carousel>
+  <div class="display-3 text-white display-6 text-uppercase text-center fw-bolder position-absolute top-1 absolute">
     Привет! Этот сервис создан для отслеживания запусков компании SpaceX. Здесь можно найти информацию о прошедших
     запусках и описание ракет
-
-    <!--<p class="fs-4 p-2">
-      <span class="fst-italic">Space Exploration Technologies Corporation, SpaceX</span> —
-      американская компания, производитель космической техники. Штаб-квартира — в городе Хоторне, Калифорния, США.
-      Основана в 2002 году прежним акционером PayPal и CEO Tesla Motors Илоном Маском с целью сократить расходы на
-      полёты
-      в космос для открытия пути к колонизации Марса.
-      Компания разработала ракеты-носители Falcon 1, Falcon 9 и Falcon Heavy, с самого начала преследуя цель сделать
-      их
-      многоразовыми, и космический корабль Dragon (выводимый на орбиту теми же Falcon 9), предназначенный для
-      пополнения
-      запасов на Международной космической станции.</p>-->
-
-    <!--
-    <div class="flex-fill p-5">
-      <img
-        alt="Falcon9 SpaceX"
-        class="shadow-lg bg-white rounded" height="500"
-        src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/eb/Bangabandhu_Satellite-1_Mission_%2842025499722%29.jpg/533px-Bangabandhu_Satellite-1_Mission_%2842025499722%29.jpg"
-        width="400">
-      <p class="mt-3 fst-italic fw-bolder text-center">Запуск Falcon 9 Block 5 со спутником Bangabandhu-1</p>
-    </div>-->
+  </div>
+  <div class="position-absolute bottom-0 d-inline p-2">
+    <a class="p-2 m-1"
+       href="https://github.com/DaniilRyb?tab=repositories" target="_blank"
+       title="https://github.com/DaniilRyb?tab=repositories">
+      <img alt="GitHub" height="40" src="assets/icons-github.svg" width="40">
+    </a>
+    <a class="p-2 m-1"
+       href="https://vk.com/daniil_ryb" target="_blank" title="https://vk.com/daniil_ryb">
+      <img alt="vk" height="40" src="assets/icons-vk.svg" width="40">
+    </a>
+    <a class="p-2 m-1"
+       href="/" target="_blank" title="LinkedIn">
+      <img alt="LinkedIn" height="40" src="assets/icons-linkedin.svg" width="40">
+    </a>
+  </div>
+  <div class="d-inline position-absolute bottom-0 end-0">
+    <h4 class="text-white p-2 text-uppercase">Created by Daniil Rybakov</h4>
   </div>
 </div>
+
