--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
       <div>
         <img
           alt="SpaceX_logo"
-          class="d-inline-block align-top" height="40"
+          class="d-inline-block align-top img-logo" height="40"
           src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/36/SpaceX-Logo-Xonly.svg/1280px-SpaceX-Logo-Xonly.svg.png"
           width="100">
       </div>
@@ -13,6 +13,16 @@
         Сервис для отслеживания космичеких запусков
       </span>
       </div>
+      <button (click)="menu.show()" aria-controls="navbarNav"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+              class="navbar-toggler"
+              data-target="#navbarNav"
+              data-toggle="collapse" title="Menu"
+              type="button">
+        <span class="navbar-toggler-icon">
+        </span>
+      </button>
       <div class="collapse navbar-collapse">
         <ul class="navbar-nav nav mr-auto mb-2 mb-lg-0 p-3 text-uppercase">
           <li class="nav-item active">
@@ -29,9 +39,8 @@
     </div>
   </nav>
 </header>
-
-<router-outlet>
-</router-outlet>
+<app-menu #menu/>
+<router-outlet/>
 
 <!--<footer class="footer">
 <div>
