--- a/src/app/components/rockets-list/falcon-heavy/falcon-heavy.component.html
+++ b/src/app/components/rockets-list/falcon-heavy/falcon-heavy.component.html
@@ -1,5 +1,5 @@
 <h2 class="font-bold text-center mt-4 text-uppercase fw-bolder">Подробное описание</h2>
-<div class="m-auto p-4">
+<div class="form-check justify-content-center m-auto p-5 font">
   <table class="table table-striped table-hover">
     <tbody>
     <tr>
@@ -128,23 +128,32 @@
       <th scope="row">{{payload.name}} - {{payload.id | uppercase}}</th>
       <td>{{(payload.kg | number) + " кг"}}</td>
     </tr>
-    <tr *ngFor="let img of rocketsService.rockets[2].flickr_images" class="text-center">
+    <tr class="text-center">
       <th class="text-lg-start" scope="row">Изображения</th>
       <td>
-        <img [alt]="rocketsService.rockets[2].name"
-             [src]="img"
-             [title]="rocketsService.rockets[2].name + ' rocket image'"
-             height="400" width="700"></td>
-    </tr>
-    <tr class="text-center">
-      <th scope="row">Видео</th>
-      <td>
-        <iframe class="shadow-lg" height="400" src="https://www.youtube.com/embed/wbSwFU6tY1c"
-                title="Starship | SN10 | High-Altitude Flight Test"
-                width="700">
-        </iframe>
+        <ul class="list-unstyled">
+          <li *ngFor="let img of rocketsService.rockets[2].flickr_images" class="p-2">
+            <img [alt]="rocketsService.rockets[2].name"
+                 [src]="img"
+                 [title]="rocketsService.rockets[2].name + ' rocket image'"
+                 class="img-fluid h-auto w-100"
+                 height="400"
+                 width="700">
+          </li>
+        </ul>
       </td>
     </tr>
+    <!-- <tr class="text-center">
+       <th scope="row">Видео</th>
+       <td>
+         <iframe height="400"
+                 src="https://www.youtube.com/embed/wbSwFU6tY1c"
+                 title="Starship | SN10 | High-Altitude Flight Test"
+                 width="700"
+                 class="img-fluid h-auto w-100">
+         </iframe>
+       </td>
+     </tr>-->
     </tbody>
   </table>
 </div>
