--- a/src/app/components/rockets-list/falcon1/falcon1.component.html
+++ b/src/app/components/rockets-list/falcon1/falcon1.component.html
@@ -1,6 +1,6 @@
 <h2 class="font-bold text-center mt-4 text-uppercase fw-bolder">Подробное описание</h2>
-<div class="m-auto p-4">
-  <table class="table table-striped">
+<div class="form-check justify-content-center m-auto p-5 font">
+  <table class="table table-striped table-hover">
     <tbody>
     <tr>
       <th scope="row">Ракета семейства</th>
@@ -127,26 +127,28 @@
       <th scope="row">{{payload.name}} - {{payload.id | uppercase}}</th>
       <td>{{payload.kg + " кг"}}</td>
     </tr>
-    <tr *ngFor="let img of rocketsService.rockets[0].flickr_images" class="text-center">
-      <th class="text-lg-start" scope="row">Изображения</th>
-      <td>
-        <img [alt]="rocketsService.rockets[0].name"
-             [src]="img"
-             [title]="rocketsService.rockets[2].name + 'rocket image'"
-             height="400" width="700">
-      </td>
-    </tr>
     <tr class="text-center">
-      <th scope="row">Видео</th>
-      <!--<h3 class="font-bold mt-4 mb-4 text-uppercase">Видео</h3>
-      -->
-      <td>
-        <iframe class="shadow-lg" height="400" src="https://www.youtube.com/embed/dLQ2tZEH6G0"
-                title="Starship | SN10 | High-Altitude Flight Test"
-                width="700">
-        </iframe>
-      </td>
+      <th class="text-lg-start" scope="row">Изображения</th>
+      <ul class="list-unstyled">
+        <li *ngFor="let img of rocketsService.rockets[0].flickr_images" class="p-2">
+          <img [alt]="rocketsService.rockets[0].name"
+               [src]="img"
+               [title]="rocketsService.rockets[2].name + 'rocket image'"
+               class="img-fluid h-auto w-100"
+               height="400"
+               width="700">
+        </li>
+      </ul>
     </tr>
+    <!--  <tr class="text-center">
+        <th scope="row">Видео</th>
+        <td>
+          <iframe height="400" src="https://www.youtube.com/embed/dLQ2tZEH6G0"
+                  title="Starship | SN10 | High-Altitude Flight Test"
+                  class="img-fluid h-auto w-100">
+          </iframe>
+        </td>
+      </tr>-->
     </tbody>
   </table>
 </div>
