--- a/src/app/components/rockets-list/starship/starship.component.html
+++ b/src/app/components/rockets-list/starship/starship.component.html
@@ -1,5 +1,5 @@
 <h2 class="font-bold text-center mt-4 text-uppercase fw-bolder">Подробное описание</h2>
-<div class="m-auto p-4">
+<div class="form-check justify-content-center m-auto p-5 font">
   <table class="table table-striped table-hover">
     <tbody>
     <tr>
@@ -134,26 +134,26 @@
     </tr>
     <tr class="text-center">
       <th class="text-lg-start" scope="row">Изображения</th>
-      <ul class="m-0 p-0">
-        <li *ngFor="let img of rocketsService.rockets[3].flickr_images" class="p-0 m-0 list-unstyled">
+      <ul class="list-unstyled">
+        <li *ngFor="let img of rocketsService.rockets[3].flickr_images" class="p-2">
           <img [alt]="rocketsService.rockets[3].name"
-               [height]="400"
                [src]="img"
                [title]="rocketsService.rockets[3].name + ' rocket image'"
-               [width]="700"
-               class="mx-auto p-2">
+               class="img-fluid h-auto w-100 p-2"
+               height="400"
+               width="700">
         </li>
       </ul>
-    </tr>
-    <tr class="text-center">
-      <th scope="row">Видео</th>
-      <td>
-        <iframe class="mx-auto" height="400" src="https://www.youtube.com/embed/ODY6JWzS8WU"
-                title="Starship | SN10 | High-Altitude Flight Test"
-                width="700">
-        </iframe>
-      </td>
-    </tr>
+      <!--</tr>
+      <tr class="text-center">
+        <th scope="row">Видео</th>
+        <td>
+          <iframe class="mx-auto" height="400" src="https://www.youtube.com/embed/ODY6JWzS8WU"
+                  title="Starship | SN10 | High-Altitude Flight Test"
+                  width="700">
+          </iframe>
+        </td>
+      </tr>-->
     </tbody>
   </table>
 </div>
