--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -46,9 +46,8 @@
       <img [alt]="item" [src]="item" class="d-block w-100 h-100">
     </mdb-carousel-item>
   </mdb-carousel>
-  <div class="display-3 text-white display-6 text-uppercase text-center fw-bolder position-absolute top-1 absolute">
-    Привет! Этот сервис создан для отслеживания запусков компании SpaceX. Здесь можно найти информацию о прошедших
-    запусках и описание ракет
+  <div class="display-5 text-white text-uppercase text-center fw-bolder position-absolute top-1 absolute">
+    {{'MAIN_PAGE.MAIN.DESCRIPTION' | translate }}
   </div>
   <div class="position-absolute bottom-0 d-inline p-2">
     <a class="p-2 m-1"
