--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -2,12 +2,12 @@
   <ul class="bg-dark menu">
     <a>
       <li class="list-unstyled text-lg-center p-2 fs-4 text-uppercase text-center text-white" routerLink="/launches">
-        Запуски SpaceX
+        {{ "MAIN_PAGE.HEADER.LAUNCH_PAGE" | translate }}
       </li>
     </a>
     <a>
       <li class="list-unstyled text-lg-center p-2 fs-4 text-uppercase text-center text-white" routerLink="/rockets">
-        Описание ракет
+        {{'ROCKETS.DESCRIPTION_ROCKETS' | translate }}
       </li>
     </a>
   </ul>
