--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,9 +9,7 @@
           width="100">
       </div>
       <div class="navbar-brand pointer-event pointer" routerLink="/">SpaceX Launcher<br>
-        <span class="text-small fw-bold">
-        Сервис для отслеживания космичеких запусков
-      </span>
+        <span class="text-small fw-bold">{{"MAIN_PAGE.HEADER.LOGO_DESC" | translate }}</span>
       </div>
       <button (click)="menu.show()" aria-controls="navbarNav"
               aria-expanded="false"
@@ -26,16 +24,20 @@
       <div class="collapse navbar-collapse">
         <ul class="navbar-nav nav mr-auto mb-2 mb-lg-0 p-3 text-uppercase">
           <li class="nav-item active">
-            <a class="nav-link" routerLink="/">Главная</a>
+            <a class="nav-link" routerLink="/">{{'MAIN_PAGE.HEADER.HOME_PAGE' | translate }}</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" routerLink="/launches">Запуски SpaceX</a>
+            <a class="nav-link" routerLink="/launches">{{"MAIN_PAGE.HEADER.LAUNCH_PAGE" | translate}}</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" routerLink="/rockets">ракеты</a>
+            <a class="nav-link" routerLink="/rockets">{{"MAIN_PAGE.HEADER.ROCKETS_PAGE" | translate}}</a>
           </li>
         </ul>
       </div>
+    </div>
+    <div class="m-0 p-0 d-lg-flex">
+    <button (click)="translate.use('ru')" class="btn btn-dark m-1">RU</button>
+    <button (click)="translate.use('en')" class="btn btn-dark m-1">EN</button>
     </div>
   </nav>
 </header>
