--- a/src/app/components/rocket/rocket.component.html
+++ b/src/app/components/rocket/rocket.component.html
@@ -6,7 +6,7 @@
            width="100">
       <div class="card-body">
         <h5 class="card-title">{{rocketType.name}}</h5>
-        <h6 class="card-text">Первый запуск - {{rocketType.first_flight | date}}</h6>
+        <h6 class="card-text">{{'FIRST_LAUNCH' | translate}} - {{rocketType.first_flight | date}}</h6>
         <p class="card-text text-lg-start">{{rocketType.description | limitSymbols: 90}}</p>
       </div>
     </div>
