--- a/src/app/components/rockets-list/falcon-heavy/falcon-heavy.component.html
+++ b/src/app/components/rockets-list/falcon-heavy/falcon-heavy.component.html
@@ -1,160 +1,162 @@
-<h2 class="font-bold text-center mt-4 text-uppercase fw-bolder">Подробное описание</h2>
-<div class="form-check justify-content-center m-auto p-5 font">
-  <table class="table table-striped table-hover">
-    <tbody>
-    <tr>
-      <th scope="row">Ракета семейства</th>
-      <td class="p-2">{{rocketsService.rockets[2].name}}</td>
-    </tr>
-    <tr>
-    <tr>
-      <th scope="row">В эксплуатации</th>
-      <td> {{rocketsService.rockets[2].active ? "да" : "нет"}}</td>
-    </tr>
-    <tr>
-      <th scope="row">Страна</th>
-      <td>{{rocketsService.rockets[2].country}}</td>
-    </tr>
-    <tr>
-      <th scope="row">Компания</th>
-      <td>{{rocketsService.rockets[2].company}}</td>
-    </tr>
-    <tr>
-      <th scope="row">Первый полет</th>
-      <td>{{rocketsService.rockets[2].first_flight | date }}</td>
-    </tr>
-    <tr>
-      <th scope="row">Стомость запуска</th>
-      <td>{{rocketsService.rockets[2].cost_per_launch | currency }}</td>
-    </tr>
-    <tr>
-    <tr>
-      <th scope="row">Описание</th>
-      <td>{{rocketsService.rockets[2].description}}</td>
-    </tr>
-    <tr>
-      <th scope="row">Высота</th>
-      <td>{{(rocketsService.rockets[2].height.meters | number) + " м"}}</td>
-    </tr>
-    <tr>
-      <th scope="row">Диаметр</th>
-      <td>{{(rocketsService.rockets[2].diameter.meters | number) + " м"}}</td>
-    </tr>
-    <tr>
-      <th scope="row">Количество ступеней</th>
-      <td>{{rocketsService.rockets[2].stages}}</td>
-    </tr>
-    <tr>
-      <th scope="row">Количество боковых ускорителей</th>
-      <td>{{rocketsService.rockets[2].boosters}}</td>
-    </tr>
-    <tr>
-      <th scope="row">Статья</th>
-      <td><a [href]="rocketsService.rockets[2].wikipedia" class="text-decoration-none">Wikipedia</a></td>
-    </tr>
-    <tr>
-      <th scope="row">Общая масса</th>
-      <td>{{(rocketsService.rockets[2].mass.kg / 1000).toFixed(0)| number }} т</td>
-    </tr>
-    <tr>
-      <th scope="row">Тяга первой ступени над уровнем моря</th>
-      <td>{{(rocketsService.rockets[2].first_stage.thrust_sea_level.kN | number) + " кН" }}</td>
-    </tr>
-    <tr>
-      <th scope="row">Тяга первой ступени в вакууме</th>
-      <td>{{(rocketsService.rockets[2].first_stage.thrust_vacuum.kN | number) + " кН" }}</td>
-    </tr>
-    <tr>
-      <th scope="row">Многоразовая</th>
-      <td>{{rocketsService.rockets[2].first_stage.reusable ? "да" : "нет" }}</td>
-    </tr>
-    <tr>
-      <th scope="row">Количество двигателей первой ступени</th>
-      <td>{{rocketsService.rockets[2].first_stage.engines}}</td>
-    </tr>
-    <tr>
-      <th scope="row">Масса топлива</th>
-      <td>{{(rocketsService.rockets[2].first_stage.fuel_amount_tons | number) + " т"}}</td>
-    </tr>
-    <tr>
-      <th scope="row">Время работы первой ступени</th>
-      <td>{{rocketsService.rockets[2].first_stage.burn_time_sec + " c"}}</td>
-    </tr>
-    <tr>
-      <th scope="row">Тяга второй ступени ступени</th>
-      <td>{{rocketsService.rockets[2].second_stage.thrust.kN + " кН"}}</td>
-    </tr>
-    <tr>
-      <th scope="row">Высота головного обтекателя</th>
-      <td>{{rocketsService.rockets[2].second_stage.payloads.composite_fairing.height.meters + " м"}}</td>
-    </tr>
-    <tr>
-      <th scope="row">Диаметр головного обтекателя</th>
-      <td>{{rocketsService.rockets[2].second_stage.payloads.composite_fairing.diameter.meters + " м"}}</td>
-    </tr>
-    <tr>
-      <th scope="row">Материал</th>
-      <td>{{rocketsService.rockets[2].second_stage.payloads.option_1 | titlecase }}</td>
-    </tr>
-    <tr>
-      <th scope="row">Масса топлива второй ступени</th>
-      <td>{{rocketsService.rockets[2].second_stage.fuel_amount_tons + " т"}}</td>
-    </tr>
-    <tr>
-      <th scope="row">Суммарное время работы второй ступени</th>
-      <td>{{rocketsService.rockets[2].second_stage.burn_time_sec + " с" }}</td>
-    </tr>
-    <tr>
-      <th scope="row">Тип двигателя</th>
-      <td>{{rocketsService.rockets[2].engines.type | titlecase }}</td>
-    </tr>
-    <tr>
-      <th scope="row">Топливо первой ступени</th>
-      <td>{{rocketsService.rockets[2].engines.propellant_1 | titlecase}}</td>
-    </tr>
-    <tr>
-      <th scope="row">Топливо второй ступени</th>
-      <td>{{rocketsService.rockets[2].engines.propellant_2 | titlecase}}</td>
-    </tr>
-    <tr>
-      <th scope="row">Количество посадочных ног</th>
-      <td>{{rocketsService.rockets[2].landing_legs.number }}</td>
-    </tr>
-    <tr>
-      <th scope="row">Материал</th>
-      <td>{{rocketsService.rockets[2].landing_legs.material | titlecase }}</td>
-    </tr>
-    <tr *ngFor="let payload of rocketsService.rockets[2].payload_weights">
-      <th scope="row">{{payload.name}} - {{payload.id | uppercase}}</th>
-      <td>{{(payload.kg | number) + " кг"}}</td>
-    </tr>
-    <tr class="text-center">
-      <th class="text-lg-start" scope="row">Изображения</th>
-      <td>
-        <ul class="list-unstyled">
-          <li *ngFor="let img of rocketsService.rockets[2].flickr_images" class="p-2">
-            <img [alt]="rocketsService.rockets[2].name"
-                 [src]="img"
-                 [title]="rocketsService.rockets[2].name + ' rocket image'"
-                 class="img-fluid h-auto w-100"
-                 height="400"
-                 width="700">
-          </li>
-        </ul>
-      </td>
-    </tr>
-    <!-- <tr class="text-center">
-       <th scope="row">Видео</th>
-       <td>
-         <iframe height="400"
-                 src="https://www.youtube.com/embed/wbSwFU6tY1c"
-                 title="Starship | SN10 | High-Altitude Flight Test"
-                 width="700"
-                 class="img-fluid h-auto w-100">
-         </iframe>
-       </td>
-     </tr>-->
-    </tbody>
-  </table>
+<div>
+  <h2 class="font-bold text-center mt-4 text-uppercase fw-bolder">{{'ROCKETS.DETAILED_DESCRIPTION' | translate}}</h2>
+  <div class="form-check justify-content-center m-auto p-5 font">
+    <table class="table table-striped table-hover">
+      <tbody>
+      <tr>
+        <th scope="row">{{'ROCKETS.ROCKETS_FAMILY' | translate}}</th>
+        <td class="p-2">{{rocketsService.rockets[2].name}}</td>
+      </tr>
+      <tr>
+      <tr>
+        <th scope="row">{{'ROCKETS.IN_OPERATION' | translate}}</th>
+        <td> {{rocketsService.rockets[2].active ? "да" : "нет"}}</td>
+      </tr>
+      <tr>
+        <th scope="row">{{'ROCKETS.COUNTRY' | translate}}</th>
+        <td>{{rocketsService.rockets[2].country}}</td>
+      </tr>
+      <tr>
+        <th scope="row">{{'ROCKETS.COMPANY' | translate}}</th>
+        <td>{{rocketsService.rockets[2].company}}</td>
+      </tr>
+      <tr>
+        <th scope="row">{{'ROCKETS.FIRST_FLIGHT' | translate}}</th>
+        <td>{{rocketsService.rockets[2].first_flight | date }}</td>
+      </tr>
+      <tr>
+        <th scope="row">{{'ROCKETS.LAUNCH_COST' | translate}}</th>
+        <td>{{rocketsService.rockets[2].cost_per_launch | currency }}</td>
+      </tr>
+      <tr>
+      <tr>
+        <th scope="row">{{'ROCKETS.DESCRIPTION' | translate}}</th>
+        <td>{{rocketsService.rockets[2].description}}</td>
+      </tr>
+      <tr>
+        <th scope="row">{{'ROCKETS.HEIGHT' | translate}}</th>
+        <td>{{(rocketsService.rockets[2].height.meters | number) + " м"}}</td>
+      </tr>
+      <tr>
+        <th scope="row">{{'ROCKETS.DIAMETER' | translate}}</th>
+        <td>{{(rocketsService.rockets[2].diameter.meters | number) + " м"}}</td>
+      </tr>
+      <tr>
+        <th scope="row">{{'ROCKETS.NUMBER_OF_STEPS' | translate}}</th>
+        <td>{{rocketsService.rockets[2].stages}}</td>
+      </tr>
+      <tr>
+        <th scope="row">{{'ROCKETS.NUMBERS_OF_SIDE_BOOSTERS' | translate}}</th>
+        <td>{{rocketsService.rockets[2].boosters}}</td>
+      </tr>
+      <tr>
+        <th scope="row">{{'ROCKETS.ARTICLE' | translate}}</th>
+        <td><a [href]="rocketsService.rockets[2].wikipedia" class="text-decoration-none">Wikipedia</a></td>
+      </tr>
+      <tr>
+        <th scope="row">{{'ROCKETS.TOTAL_WEIGHT' | translate}}</th>
+        <td>{{(rocketsService.rockets[2].mass.kg / 1000).toFixed(0)| number }} т</td>
+      </tr>
+      <tr>
+        <th scope="row">{{'ROCKETS.THRUST_SEE_LEVEL' | translate}}</th>
+        <td>{{(rocketsService.rockets[2].first_stage.thrust_sea_level.kN | number) + " кН" }}</td>
+      </tr>
+      <tr>
+        <th scope="row">{{'ROCKETS.THRUST_VACUUM' | translate}}</th>
+        <td>{{(rocketsService.rockets[2].first_stage.thrust_vacuum.kN | number) + " кН" }}</td>
+      </tr>
+      <tr>
+        <th scope="row">{{'ROCKETS.REUSABLE' | translate}}</th>
+        <td>{{rocketsService.rockets[2].first_stage.reusable ? "да" : "нет" }}</td>
+      </tr>
+      <tr>
+        <th scope="row">{{'ROCKETS.NUMBER_ENGINES' | translate}}</th>
+        <td>{{rocketsService.rockets[2].first_stage.engines}}</td>
+      </tr>
+      <tr>
+        <th scope="row">{{'ROCKETS.FUEL' | translate}}</th>
+        <td>{{(rocketsService.rockets[2].first_stage.fuel_amount_tons | number) + " т"}}</td>
+      </tr>
+      <tr>
+        <th scope="row">{{'ROCKETS.OPERATING' | translate}}</th>
+        <td>{{rocketsService.rockets[2].first_stage.burn_time_sec + " c"}}</td>
+      </tr>
+      <tr>
+        <th scope="row">{{'ROCKETS.THRUST_SECOND_STAGE' | translate}}</th>
+        <td>{{rocketsService.rockets[2].second_stage.thrust.kN + " кН"}}</td>
+      </tr>
+      <tr>
+        <th scope="row">{{'ROCKETS.HEIGHT_HEAD_FAIRING' | translate}}</th>
+        <td>{{rocketsService.rockets[2].second_stage.payloads.composite_fairing.height.meters + " м"}}</td>
+      </tr>
+      <tr>
+        <th scope="row">{{'ROCKETS.DIAMETER_HEAD_FAIRING' | translate}}</th>
+        <td>{{rocketsService.rockets[2].second_stage.payloads.composite_fairing.diameter.meters + " м"}}</td>
+      </tr>
+      <tr>
+        <th scope="row">{{'ROCKETS.MATERIAL' | translate}}</th>
+        <td>{{rocketsService.rockets[2].second_stage.payloads.option_1 | titlecase }}</td>
+      </tr>
+      <tr>
+        <th scope="row">{{'ROCKETS.FUEL_SECOND_STAGE' | translate}}</th>
+        <td>{{rocketsService.rockets[2].second_stage.fuel_amount_tons + " т"}}</td>
+      </tr>
+      <tr>
+        <th scope="row">{{'ROCKETS.TIME_SECOND_STAGE' | translate}}</th>
+        <td>{{rocketsService.rockets[2].second_stage.burn_time_sec + " с" }}</td>
+      </tr>
+      <tr>
+        <th scope="row">{{'ROCKETS.ENGINE_TYPE' | translate}}</th>
+        <td>{{rocketsService.rockets[2].engines.type | titlecase }}</td>
+      </tr>
+      <tr>
+        <th scope="row">{{'ROCKETS.FIRST_STAGE_FUEL' | translate}}</th>
+        <td>{{rocketsService.rockets[2].engines.propellant_1 | titlecase}}</td>
+      </tr>
+      <tr>
+        <th scope="row">{{'ROCKETS.SECOND_STAGE_FUEL' | translate}}</th>
+        <td>{{rocketsService.rockets[2].engines.propellant_2 | titlecase}}</td>
+      </tr>
+      <tr>
+        <th scope="row">{{'ROCKETS.NUMBER_LANDING_LEGS' | translate}}</th>
+        <td>{{rocketsService.rockets[2].landing_legs.number }}</td>
+      </tr>
+      <tr>
+        <th scope="row">{{'ROCKETS.MATERIAL_LEGS' | translate}}</th>
+        <td>{{rocketsService.rockets[2].landing_legs.material | titlecase }}</td>
+      </tr>
+      <tr *ngFor="let payload of rocketsService.rockets[2].payload_weights">
+        <th scope="row">{{payload.name}} ({{payload.id | uppercase}})</th>
+        <td>{{(payload.kg | number) + " кг"}}</td>
+      </tr>
+      <tr class="text-center">
+        <th class="text-lg-start" scope="row">{{'ROCKETS.IMAGES' | translate}}</th>
+        <td>
+          <ul class="list-unstyled">
+            <li *ngFor="let img of rocketsService.rockets[2].flickr_images" class="p-2">
+              <img [alt]="rocketsService.rockets[2].name"
+                   [src]="img"
+                   [title]="rocketsService.rockets[2].name + ' rocket image'"
+                   class="img-fluid h-auto w-100"
+                   height="400"
+                   width="700">
+            </li>
+          </ul>
+        </td>
+      </tr>
+      <!-- <tr class="text-center">
+         <th scope="row">Видео</th>
+         <td>
+           <iframe height="400"
+                   src="https://www.youtube.com/embed/wbSwFU6tY1c"
+                   title="Starship | SN10 | High-Altitude Flight Test"
+                   width="700"
+                   class="img-fluid h-auto w-100">
+           </iframe>
+         </td>
+       </tr>-->
+      </tbody>
+    </table>
+  </div>
+  <app-scroll-page/>
 </div>
-<app-scroll-page/>
