--- a/src/app/components/scroll-page/scroll-page.component.html
+++ b/src/app/components/scroll-page/scroll-page.component.html
@@ -1,1 +1,2 @@
-<p (click)="scroll($event)" class="btn btn-primary p-3 m-3 position-relative bottom-0 end-0">Наверх☝️</p>
+<p (click)="scroll($event)" class="btn btn-primary p-3 m-3 position-relative bottom-0 end-0">
+  {{'BUTTON_UP' | translate}}☝️</p>
