--- a/src/app/components/rockets/rockets.component.html
+++ b/src/app/components/rockets/rockets.component.html
@@ -1,6 +1,7 @@
 <div>
   <div>
-    <h2 class="font-bold text-center mt-4 mb-4 text-uppercase fw-bolder">{{'ROCKETS.DESCRIPTION_ROCKETS' | translate}}</h2>
+    <h2
+      class="font-bold text-center mt-4 mb-4 text-uppercase fw-bolder">{{'ROCKETS.DESCRIPTION_ROCKETS' | translate}}</h2>
   </div>
   <div class="row row-cols-1 row-cols-md-3 g-4">
     <app-rocket *ngFor="let rocket of rocketsService.rockets" [rocketType]="rocket"></app-rocket>
