--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
           width="100">
       </div>
       <div class="navbar-brand pointer-event pointer" routerLink="/">SpaceX Launcher<br>
-        <span class="text-small fw-bold">{{"MAIN_PAGE.HEADER.LOGO_DESC" | translate }}</span>
+        <span class="logo-desc-mobile-none text-small fw-bold">{{"MAIN_PAGE.HEADER.LOGO_DESC" | translate }}</span>
       </div>
       <button (click)="menu.show()"
               aria-controls="navbarNav"
