--- a/src/app/components/not-found-page/not-found-page.component.html
+++ b/src/app/components/not-found-page/not-found-page.component.html
@@ -1,4 +1,4 @@
 <div class="text-center pt-5">
-  <p class="fs-2">Ошибка 404. Страница c запуском не найдена... :(</p>
-  <p class="fs-6">Error 404. Page with launch not found...</p>
+  <p class="fs-2">{{"ERROR.MESSAGE" | translate}} ...</p>
+  <img src="assets/not-found-img.png" width="300" height="300">
 </div>
